--- a/style.css
+++ b/style.css
@@ -10,21 +10,31 @@ body {
   list-style-type: none;
   padding:0;
   margin:0;
-  border: thin inset grey 
+  border: thin inset grey;
+}
+
+#film-viewer, #film {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #film>li {
   float: left;
   width:  40px;
-  height: 20px;
+  height: 40px;
   border: 1px inset grey;
 }
+
 
 #film-viewer {
   position:absolute; 
   width: 50%;
-  height: 20px;
-  background: aqua; 
+  height: 40px;
+  background: aqua;
   border: thin inset black;
   z-index:999;
   opacity:0.3;
